# diffusion-molecule-container

./: .dive-ci  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  buildkitd.toml  dockerd-entrypoint.sh  molecule-wrapper.sh  pyproject.toml  renovate.json  uv-install-and-sync.sh
.agents/: updater.md
.github/: dependabot.yml
.github/workflows/: ai-updater.yml  build-and-publish.yml  cleanup.yml  dockerfile-updater.yml  lint.yml
.kiro/agents/: code-reviewer.json  devops-senior-engineer.json  senior-qa-tester.json
.kiro/specs/: image-optimization.md
.kiro/steering/: steering.md
docs/: CHANGELOG.md  CONFIGURATION.md
